UC-201 change logi related to resource types