@@ -11,6 +11,7 @@ import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor
@@ -31,7 +32,10 @@ class SqlCloudConnectorRepositoryAdapter implements CloudConnectorRepositoryPort
 
     @Override
     public List<CloudConnector> findAll() {
-        return repository.findAll().stream().map(mapper::toDomain).toList();
+        return repository.findAll()
+                .stream()
+                .map(mapper::toDomain)
+                .collect(Collectors.toList());
     }
 
     @Override
